# kaggle

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
kaggle_cli_wrapper/: __init__.py  enums.py  utils.py
src/: __init__.py  utils.py
