[build-system]
requires = ["setuptools>=61.0", "kaggle"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle_cli_wrapper"
version = "1.0"
authors = [
  { name="Sunny Joshi", email="sunnyjoshi1401@gmail.com" },
]
description = "Kaggle CLI based python wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: No Input/Output (Daemon)"
]

[project.urls]
"Homepage" = "https://github.com/sunny1401/kaggle_cli_wrapper"
"Bug Tracker" = "https://github.com/sunny1401/kaggle_cli_wrapper/issues"