[build-system]
requires = ["setuptools>=61.0"]
# Use legacy backend to import local packages in setup.py
build-backend = "setuptools.build_meta:__legacy__"

[tool.poetry.dependencies]
kaggle= "*"
requests= "*"
future = "*"
dataclasses = "*"
pandas = "1.5.3"
gitpython = "*"


[tool.black]
# Uncomment if pyproject.toml worked fine to ensure consistency with flake8
# line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[project]
name = "kaggle_cli_wrapper"
version = "0.1"
authors = [
  { name="Sunny Joshi", email="sunnyjoshi1401@gmail.com" },
]
keywords=['Kaggle', 'API', "Wrapper", "Python"]
description = "Kaggle CLI based python wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: No Input/Output (Daemon)"
]

[project.urls]
"Homepage" = "https://github.com/sunny1401/kaggle_utils"
"Bug Tracker" = "https://github.com/sunny1401/kaggle_utils/issues"